# EasyCuda

./: CMakeLists.txt  README.md
src/: main.cu
